# tailstate

./: .gitignore  AGENTS.md  Makefile  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: development.md
examples/: log4j_metrics.py  rotation_walkthrough.py
src/tailstate/: __init__.py  example_standalone.py  fs_utils.py  log4j_line_processor.py  persistent.py  rotated.py  timed_processor.py  types.py
tests/: conftest.py  test___init__.py  test_examples.py  test_fs_utils.py  test_log4j_line_processor.py  test_persistent.py  test_rotated.py  test_timed_processor.py
