[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tailstate"
version = "0.1.0"
description = "Stateful incremental reading of rotated log files with persisted inode/seek position."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Dave Beckett", email = "dave@dajobe.org" },
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-cov>=6.0.0",
    "ruff>=0.15.11",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tailstate = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
# Paths (not package name) avoid "module-not-measured" when the package is
# installed editable and imported before pytest-cov attaches (src layout).
source = ["src/tailstate"]

[tool.coverage.report]
show_missing = true

[tool.black]
target-version = ["py311"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "I",   # isort
    "SIM", # flake8-simplify
]

[tool.mypy]
python_version = "3.11"
packages = ["tailstate"]
mypy_path = "src"
explicit_package_bases = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_redundant_casts = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
