[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tailstate"
dynamic = ["version"]
description = "Stateful incremental reading of rotated log files with persisted inode/seek position."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Dave Beckett", email = "dave@dajobe.org" },
]
dependencies = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: POSIX :: BSD :: FreeBSD",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Logging",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/dajobe/tailstate"
Repository = "https://github.com/dajobe/tailstate"
Issues = "https://github.com/dajobe/tailstate/issues"
Changelog = "https://github.com/dajobe/tailstate/releases"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-cov>=6.0.0",
    "ruff>=0.15.11",
]

[tool.hatch.version]
path = "src/tailstate/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/tailstate"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
# Paths (not package name) avoid "module-not-measured" when the package is
# installed editable and imported before pytest-cov attaches (src layout).
source = ["src/tailstate"]

[tool.coverage.report]
show_missing = true

[tool.black]
target-version = ["py311"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "I",   # isort
    "SIM", # flake8-simplify
]

[tool.mypy]
python_version = "3.11"
packages = ["tailstate"]
mypy_path = "src"
explicit_package_bases = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_redundant_casts = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
